add spectral rule for examples

--- a/.spectral.yml
+++ b/.spectral.yml
@@ -9,3 +9,12 @@ rules:
     then:
       field: description
       function: truthy
+
+  operation-must-have-examples:
+    description: All object types must include at least one example
+    message: Return or request type is missing an example in the schema.
+    severity: warn
+    given: $.paths.*.*.*.content[application/json]
+    then:
+      field: schema.example
+      function: truthy
