seperate ruleset file

--- a/.spectral.yml
+++ b/.spectral.yml
@@ -1,34 +1,2 @@
-extends: ["spectral:oas", "spectral:arazzo"]
-
-aliases:
-  requestOrResponseJsonContent:
-    - "$..content[application/json]"
-
-rules:
-  parameter-description:
-    description: All parameters should have a description
-    message: Parameter is missing a description.
-    severity: warn
-    given: $.paths.*.*.parameters[*]
-    then:
-      field: description
-      function: truthy
-
-  operation-must-have-examples:
-    description: All object types must include at least one example
-    message: Type is missing an example in the schema.
-    severity: warn
-    given: "#requestOrResponseJsonContent"
-    then:
-      field: schema.example
-      function: truthy
-
-  operation-id-casing:
-    description: Operation id's must be Pascal Case (upper camel case)
-    message: Operation id is not in Pascal Case.
-    severity: warn
-    given: "$..operationId"
-    then:
-      function: pattern
-      functionOptions:
-        match: "^[A-Z](([a-z0-9]+[A-Z]?)*)$"
+extends: 
+  - .spectral.ruleset.bank.yml
