refactor example handling

--- a/BankApi.Service.V1/appexamples.json
+++ b/BankApi.Service.V1/appexamples.json
@@ -34,10 +34,10 @@
   ],
   "TellerReport": [
     {
-      "name": "secretz.txt"
+      "name": "reportOfTheWeek.txt"
     },
     {
-      "name": "secretz2.txt"
+      "name": "dailyReview.txt"
     }
   ],
   "Teller": [
