--- a/BankApi.Service.V1/appsettings.json
+++ b/BankApi.Service.V1/appsettings.json
@@ -43,7 +43,7 @@
   "ApiDocument": {
     "Servers": [
       {
-        "Url": "http://localhost:5201/v1"
+        "Url": "https://localhost:5201/v1"
       }
     ],
     "Info": {
