--- a/BankApi.Service.V2/appsettings.json
+++ b/BankApi.Service.V2/appsettings.json
@@ -43,7 +43,7 @@
   "ApiDocument": {
     "Servers": [
       {
-        "Url": "http://localhost:5202/v2"
+        "Url": "https://localhost:5202/v2"
       }
     ],
     "Info": {
