--- a/BankApi.Service.V2/appexamples.json
+++ b/BankApi.Service.V2/appexamples.json
@@ -13,7 +13,7 @@
       "bankTier": "C"
     }
   ],
-  "PagingOfBankModel": [
+  "AnnotatedPagingOfBankModel": [
     {
       "count": 2,
       "data": [
